--- a/index.html
+++ b/index.html
@@ -16,5 +16,9 @@
 <body>
     <a href="media/video.mp4">Video file</a>
     | <a href="media/video.mp4"download="media/video.mp4">Download Video file</a>
+
+    <hr/>
+    <iframe src="media/video.mp4" width="640" height="360"></iframe>
+    
 </body>
 </html>
