iframe removing border

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     a {
         color: aliceblue;
     }
+    iframe {
+        border: none;
+    }
     </style>
 </head>
 <body>
@@ -19,6 +22,6 @@
 
     <hr/>
     <iframe src="media/video.mp4" width="640" height="360"></iframe>
-    
+
 </body>
 </html>
