Adding audio and source to html page

--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
     </style>
 </head>
 <body>
+    <!--
     <a href="media/video.mp4">Video file</a>
     | <a href="media/video.mp4"download="media/video.mp4">Download Video file</a>
 
     <hr/>
-    <iframe src="media/video.mp4" width="640" height="360"></iframe>
+    <iframe src="media/video.mp4" width="640" height="360"></iframe> -->
+
+    <audio src="media/audio.mp3" controls></audio>
 
 </body>
 </html>
