--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
     <hr/>
     <iframe src="media/video.mp4" width="640" height="360"></iframe> -->
 
-    <audio src="media/audio.mp3" controls></audio>
+    <audio  controls>
+        <source src="media/audio.mp3" type="audio/mpeg" />
+        <source src="media/audio.ogg" type="audio/ogg;codecs=vorbis" >
+    </audio>
 
 </body>
 </html>
