--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     iframe {
         border: none;
     }
+    figcaption{
+        font-family: Arial, Helvetica, sans-serif;
+        color: blanchedalmond;
+        padding: 10px;
+    }
     </style>
 </head>
 <body>
@@ -24,10 +29,15 @@
     <hr/>
     <iframe src="media/video.mp4" width="640" height="360"></iframe> -->
 
-    <audio  controls>
+    ><figure>
+        <figcaption>Listen to the  audio file:</figcaption>
+    
+    <audio preload="metadata" controls>
         <source src="media/audio.mp3" type="audio/mpeg" />
-        <source src="media/audio.ogg" type="audio/ogg;codecs=vorbis" >
+        <source src="media/audio.ogg" type="audio/ogg;codecs=vorbis" />
+        Sorry ... your browser does not support the audio element.
     </audio>
+    </figure>
 
 </body>
 </html>
