Adding a video to html file with poster image

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
     <hr/>
     <iframe src="media/video.mp4" width="640" height="360"></iframe> -->
-
-    ><figure>
+    <!--
+    <figure>
         <figcaption>Listen to the  audio file:</figcaption>
     
     <audio preload="metadata" controls>
@@ -37,7 +37,9 @@
         <source src="media/audio.ogg" type="audio/ogg;codecs=vorbis" />
         Sorry ... your browser does not support the audio element.
     </audio>
-    </figure>
+    </figure>  -->
+
+    <video src="media/video.mp4" poster="media/still.png" width="600" controls ></video>
 
 </body>
 </html>
