Adding caption to our video file

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
     </audio>
     </figure>  -->
 
-    <video src="media/video.mp4" poster="media/still.png" width="600" controls ></video>
+    <video src="media/video.mp4" poster="media/still.png" preload="metadata" width="600" controls >
+        <track default label="English" kind="captions" srclang="en" src="media/captions.vtt">
+    </video>
 
 </body>
 </html>
