Adding text elements for js for duration and progress bar

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
         position: relative;
         top: 0;
     }
+
+    time {
+        color: aliceblue;
+    }
     </style>
 </head>
 <body>
@@ -74,6 +78,10 @@
     <div id="mediacontrols">
         <button id="playbutton">Play</button>
         <button id="pausebutton">Pause</button>
+        <div id="timedisplay">
+            <time id="positiondisplay">00:00</time>
+            <time id="durationdisplay">00:00</time>
+        </div>
 
     </div>
 
