Adding a control progress bar

--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
             <time id="positiondisplay">00:00</time>
             <time id="durationdisplay">00:00</time>
         </div>
-
+        <div id="controlbarrail">
+            <div id="controlbarfill"></div>
+        </div>
     </div>
 
   
