--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
         </div>
         <button id="playbutton">Play</button>
         <button id="pausebutton">Pause</button>
+
         <div id="timedisplay">
             <time id="positiondisplay">00:00</time>
             <time id="durationdisplay">00:00</time>
@@ -139,11 +140,15 @@
      var fill = document.querySelector('#controlbarfill');
 
      play.addEventListener('click', playMedia);
-     function playMedia () {}
+     function playMedia() {
+        media.play();
+     }
      pause.addEventListener('click', pauseMedia);
-     function pauseMedia() {}
+     function pauseMedia() {
+        media.pause();
+     }
 
-     rail.addEventListener('click' , seekMedia);
+     rail.addEventListener('click', seekMedia);
      fill.addEventListener('click', seekMedia);
      function seekMedia(e) {}
 
