--- a/index.html
+++ b/index.html
@@ -154,7 +154,31 @@
 
      media.addEventListener('loadedmetadata', updateTime);
      media.addEventListener('timeupdate', updateTime);
-     function updateTime() {}
+     function updateTime() {
+        position.textContent = timeDisplay(media.currentTime);
+        duration.textContent =timeDisplay(media.duration);
+
+     }
+
+     function timeDisplay(t){
+        var minutes = Math.floor(t /60);
+        var seconds = Math.floor(t- minutes * 60); 
+        var minutevalue;
+        if(minutes < 10) {
+            minutevalue = '0' +minutes;
+        } else 
+        {
+            minutevalue = minutes;
+        }
+        var secondvalue;
+        if(seconds < 10) {
+            secondvalue = '0' + seconds;
+        }else {
+            secondvalue =seconds;
+        }
+        var mediatime = minutevalue + ':' + secondvalue;
+        return mediatime;
+     }
 
 
 
